--- a/public_html/CV.html
+++ b/public_html/CV.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program's Section</title>
+    <title>CV Section</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
@@ -31,24 +31,9 @@
             </nav>
       </div>
       </section>
-
-    <div class="P1">
-        <h1>Este programa muestra el nombre que se ingrese en el espacio provisto</h1><br>
-        <label for="tbuser">Username:</label>
-        <input type="text" id="tbuser" placeholder="Enter Username" maxlenght="10">
-
-        <input type="button" id="btn1" value="Click Me">
-
-        <p class="output" id="output1"></p>
-    </div>
-    <div class="P2">
-
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous">
-    </script>
-    <script src="prog3.js">
     </script>
 </body>
 </html>
