--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   <a class="nav-link" href="Programs.html">Programs</a>
-                  <a class="nav-link" href="#">CV</a>
+                  <a class="nav-link" href="CV.html">CV</a>
                   <a class="nav-link disabled">Disabled</a>
                 </div>
               </div>
