--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,12 +34,12 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
+    <img src="fotoPerf.jpg"/>
     <h1 font-size: 250>Welcome to my Web Page!!!</h1>
     <h2>My name is Francisco</h2>
+    <p>On this page you will find a series of JavaScriprt programs as well as PHP.</p>
+      <p>If you click on the "Programs" button you will be able to see them.</p>
+    <p>You will also be able to see my Curriculum Vitae by clicking on the button "CV".</p>
     </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
