--- a/public_html/CV.html
+++ b/public_html/CV.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="Programs.html">Programs</a>
                     <a class="nav-link" href="CV.html">CV</a>
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" href="PHP.html">PHP</a>
                   </div>
                 </div>
               </div>
