--- a/public_html/Programs.html
+++ b/public_html/Programs.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="Programs.html">Programs</a>
                     <a class="nav-link" href="CV.html">CV</a>
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" href="PHP.html">PHP</a>
                   </div>
                 </div>
               </div>
@@ -42,13 +42,19 @@
         <p class="output" id="output1"></p>
     </div>
     <div class="P2">
+      <h1>Este Programa muestra los miembros de mi familia al darle click</h1>
 
-    </div>
+      <input type="button" id="fam" value="Click Me">
+
+      <p class="output" id="output2"></p>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous">
     </script>
     <script src="prog3.js">
+    </script>
+    <script src="prog2.js">
     </script>
 </body>
 </html>
