--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franciscos's Web Page</title>
+    <title>Franciscos's Webpage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
@@ -23,7 +23,7 @@
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   <a class="nav-link" href="Programs.html">Programs</a>
                   <a class="nav-link" href="CV.html">CV</a>
-                  <a class="nav-link disabled">Disabled</a>
+                  <a class="nav-link" href="PHP.html">PHP</a>
                 </div>
               </div>
             </div>
@@ -35,7 +35,7 @@
         <br>
         <br>
     <img src="fotoPerf.jpg"/>
-    <h1 font-size: 250>Welcome to my Web Page!!!</h1>
+    <h1 font-size: 250>Welcome to my Webpage!!!</h1>
     <h2>My name is Francisco</h2>
     <p>On this page you will find a series of JavaScriprt programs as well as PHP.</p>
       <p>If you click on the "Programs" button you will be able to see them.</p>
