--- a/public_html/CV.html
+++ b/public_html/CV.html
@@ -8,9 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
 </head>
-<body background="back.jpg">
+<body>
     <section id="TopPage">
         <div>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -31,6 +30,24 @@
             </nav>
       </div>
       </section>
+      <div>
+        <center>
+        <h1>Francisco A. Carrero Cordero</h1>
+        <p>Bo Piedras Blancas, Villa Alameda, Car 416, Aguada, PR 00602</p>
+        <p>Telefono: (939) 366-6304</p>
+        </center>
+        <fieldset>
+            <legend>Datos Generales</legend>
+            <ul>
+              <li>Fecha de nacimiento: 02/27/2000</li>
+              <li>Email: franciscocarrero65@gmail.com</li>
+            </ul>
+        </fieldset>
+          <legend>Objetivos</legend>
+          <ul>
+            <p></p>
+          </ul>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous">
