--- a/public_html/CV.html
+++ b/public_html/CV.html
@@ -23,7 +23,8 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="Programs.html">Programs</a>
                     <a class="nav-link" href="CV.html">CV</a>
-                    <a class="nav-link" href="PHP.html">PHP</a>
+                    <a class="nav-link" href="Sect.php">PHP</a>
+                    <a class="nav-link" href="Ref.html">References</a>
                   </div>
                 </div>
               </div>
@@ -34,19 +35,38 @@
         <center>
         <h1>Francisco A. Carrero Cordero</h1>
         <p>Bo Piedras Blancas, Villa Alameda, Car 416, Aguada, PR 00602</p>
-        <p>Telefono: (939) 366-6304</p>
+        <p>Phone number: (939) 366-6304</p>
         </center>
         <fieldset>
-            <legend>Datos Generales</legend>
+            <legend>General Information</legend>
             <ul>
-              <li>Fecha de nacimiento: 02/27/2000</li>
+              <li>Date of Birth: 02/27/2000</li>
               <li>Email: franciscocarrero65@gmail.com</li>
             </ul>
         </fieldset>
-          <legend>Objetivos</legend>
+        <fieldset>
+          <legend>Objectives</legend>
           <ul>
-            <p></p>
+            <p>Work with a team of programmers and to put into practice my skills and knowledge</p>
+            <p>in the field of programming, and learn more about it along the way</p>
           </ul>
+        </fieldset>
+
+        <fieldset>
+          <legend>Education</legend>
+          <ul>
+            <li>Institution: University of Puerto Rico - Mayagüez</li>
+            <li>Degree: Bachelor's of Computer Science</li>
+          </ul>
+        </fieldset>
+
+        <fieldset>
+          <legend>Dominated Languages</legend>
+          <ul>
+            <li>Spanish</li>
+            <li>English</li>
+          </ul>
+        </fieldset>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
