--- a/public_html/Programs.html
+++ b/public_html/Programs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program's Section</title>
+    <title>References Section</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
@@ -24,7 +24,8 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="Programs.html">Programs</a>
                     <a class="nav-link" href="CV.html">CV</a>
-                    <a class="nav-link" href="PHP.html">PHP</a>
+                    <a class="nav-link" href="Sect.php">PHP</a>
+                    <a class="nav-link" href="Ref.html">References</a>
                   </div>
                 </div>
               </div>
@@ -33,21 +34,40 @@
       </section>
 
     <div class="P1">
-        <h1>Este programa muestra el nombre que se ingrese en el espacio provisto</h1><br>
+        <h1>The first program shows the name that is entered in the space provided.</h1><br>
         <label for="tbuser">Username:</label>
         <input type="text" id="tbuser" placeholder="Enter Username" maxlenght="10">
 
         <input type="button" id="btn1" value="Click Me">
 
         <p class="output" id="output1"></p>
+        <br>
+    <br>
+    <br>
+    <br>
+    <br>
     </div>
     <div class="P2">
-      <h1>Este Programa muestra los miembros de mi familia al darle click</h1>
+      <h1>This program shows the names of my family members by clicking on the button</h1>
 
       <input type="button" id="fam" value="Click Me">
 
       <p class="output" id="output2"></p>
-  </div>
+      <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    </div>
+    <div class="P3">
+      <h1>This program shows the date and time by clicking on the button</h1>
+      <button type="button"
+      onclick="document.getElementById('demo').innerHTML = Date()">
+      Click me to display Date and Time.</button>
+      
+      <p id="demo"></p>
+      <!--Enlace donde saque el codigo: https://www.w3schools.com/html/html_scripts.asp -->
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous">
