--- a/public_html/Ref.html
+++ b/public_html/Ref.html
@@ -7,9 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="Styles.css">
 </head>
-<body background="back.jpg">
+<body>
     <section id="TopPage">
       <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -30,28 +29,21 @@
             </div>
           </nav>
     </div>
+    <div id="Refe">
+        <center>
+            <h1>References:</h1>
+            <br>
+            <p>https://youtu.be/aEj0Wu33hJM</p>
+            <p>https://www.w3schools.com/html/html_scripts.asp</p>
+            <p>https://code.tutsplus.com/es/tutorials/how-to-use-php-in-html-code--cms-34378</p>
+            <p>https://www.w3schools.com/php/phptryit.asp?filename=tryphp_array_num</p>
+            <p>https://www.w3schools.com/php/phptryit.asp?filename=tryphp_function2</p>
+        </center>
+    </div>
     </section>
-    <center>
-        <br>
-        <br>
-        <br>
-    <img src="fotoPerf.jpg"/>
-    <h1 font-size: 250>Welcome to my Webpage!!!</h1>
-    <h2>My name is Francisco</h2>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p>On this page you will find a series of JavaScriprt programs as well as PHP.</p>
-      <p>If you click on the "Programs" button you will be able to see them.</p>
-    <p>You will also be able to see my Curriculum Vitae by clicking on the button "CV".</p>
-      <p>If you click on the "PHP" button you will be able to see some basic PHP programs.</p>
-    <p>To see the references, press the button "References".</p>
-    </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous">
     </script>
 </body>
-</html>
+</html>  
