add download PDF option in de CV section and some style

--- a/public_html/Ref.html
+++ b/public_html/Ref.html
@@ -9,6 +9,11 @@
     crossorigin="anonymous">
 </head>
 <body>
+  <style>
+    body{
+        background: #FAEDDD;
+      }
+  </style>
     <section id="TopPage">
       <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
