--- a/public_html/CV.html
+++ b/public_html/CV.html
@@ -10,6 +10,20 @@
     crossorigin="anonymous">
 </head>
 <body>
+    <style>
+      fieldset{
+        margin-bottom: 10px;
+      }
+      legend{
+        border: solid 1px black;
+        padding: 5px;
+        font-weight: bold;
+        border-radius: 20px;
+      }
+      body{
+        background: #FAEDDD;
+      }
+    </style>
     <section id="TopPage">
         <div>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -59,7 +73,6 @@
             <li>Degree: Bachelor's of Computer Science</li>
           </ul>
         </fieldset>
-
         <fieldset>
           <legend>Dominated Languages</legend>
           <ul>
@@ -67,6 +80,25 @@
             <li>English</li>
           </ul>
         </fieldset>
+        <fiedlset>
+          <legend>Skills</legend>
+          <ul>
+            <li>C++</li>
+            <li>Python</li>
+            <li>Communication skills</li>
+            <li>Teamwork</li>
+          </ul>
+        </fiedlset>
+      </div>
+      <div>
+        <br>
+      <center>
+        <a href = "Curriculum_FranciscoCarrero.pdf" download ="Curriculum Francisco Carrero.pdf"
+
+          <b> download PDF </b>
+          
+        </a>
+      </center>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
