add botton in the home section of my webpage to vist my GitHub

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,6 +40,11 @@
     <h2>My name is Francisco</h2>
     <br>
     <br>
+    <form>
+      <a href="https://github.com/CiscoCarrero/mywebpage/tree/master">
+      <input type="button" value="Visit my GitHub">
+        </a>
+    </form>
     <br>
     <br>
     <br>
