--- a/public_html/CV.html
+++ b/public_html/CV.html
@@ -103,6 +103,36 @@
       <br>
       <br>
       <br>
+
+      <div>
+        <script>
+          const header = document.querySelector('header');
+          const section = document.querySelector('section');
+
+          const request = new XMLHttpRequest();
+          request.open('Get', requestURL);
+
+          request.responseType = 'json';
+          request.send();
+
+          request.onload = function() {
+            const myResume = request.response;
+            populateHeader(myResume);
+          }
+
+          function populateHeader(jsonObj) {
+            const myH1 = document.createElement('h1');
+            myH1.textContent = jsonObj['general'];
+            header.appendChild(myH1);
+
+            const myPara = document.createElement('p');
+            myPara.textContent = 'Work: ' + jsonObj['work'] + ' // Education: ' + jsonObj['education'] + ' // Skills: ' + jsonObj['skills'] + ' // Languages: ' + jsonObj['languages'];
+            header.appendChild(myPara);
+          }
+
+          const requestURL = '/resume.json'
+        </script>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
     crossorigin="anonymous">
